--- a/TitlesOrganizer.Web/Views/Books/Genres.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Genres.cshtml
@@ -44,7 +44,7 @@
         </div>
     </div>
     <p class="row">
-        <a asp-action="GenreUpsert" class="col">Create New</a>
+        <a asp-action="GenreCreateNew" class="col">Create New</a>
     </p>
     <div class="list-group" id="GenresGrid">
         @if (Model.Values.Any())
