--- a/TitlesOrganizer.Web/Views/Books/Series.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Series.cshtml
@@ -44,7 +44,7 @@
         </div>
     </div>
     <p class="row">
-        <a asp-action="SeriesUpsert" class="col">Create New</a>
+        <a asp-action="SeriesCreateNew" class="col">Create New</a>
     </p>
     <div class="list-group" id="SeriesGrid">
         @if (Model.Values.Any())
