--- a/TitlesOrganizer.Web/Views/Books/_SelectBooksForSeries.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/_SelectBooksForSeries.cshtml
@@ -1,32 +1,32 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.ListGenreForBookVM
+﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.ListBookForSeriesVM
 
-<form enctype="multipart/form-data" method="post" id="selectGenres" asp-action="FinalizeSelectGenresForBook" onsubmit="SubmitSelectForBook(event, 'Genre');">
-    <input type="hidden" asp-for="Item.Id" name="bookId" id="bookId" />
+<form enctype="multipart/form-data" method="post" id="selectBooks" asp-action="FinalizeSelectBooksForSeries" onsubmit="javascript:SubmitSelectForSeries(event, 'Book');">
+    <input type="hidden" asp-for="Item.Id" name="seriesId" id="seriesId" />
     <input type="hidden" asp-for="Item.Description" />
     <div class="card w-100">
         <div class="card-header d-flex w-100 mb-1 bg-body-tertiary border-0 align-items-center">
-            <h5>Previously selected genres</h5>
+            <h5>Previously selected books</h5>
         </div>
         @if (Model.SelectedValues.Count > 0)
         {
-            <ul class="list-group list-group-flush" id="selectedAuthors">
+            <ul class="list-group list-group-flush" id="selectedBooks">
                 @{
                     int selectedIndex = 0;
-                    foreach (var genre in Model.SelectedValues)
+                    foreach (var book in Model.SelectedValues)
                     {
-                        var id = $"selectedGenre_{selectedIndex}";
+                        var id = $"selectedBook_{selectedIndex}";
                         <li class="list-group-item list-group-item-action">
-                            @if (genre.IsForItem)
+                            @if (book.IsForItem)
                             {
-                                <input type="checkbox" class="form-check-input" value="@genre.Id" checked id="@id" name="ids" />
+                                <input type="checkbox" class="form-check-input" value="@book.Id" checked id="@id" name="ids" />
                             }
                             else
                             {
-                                <input type="checkbox" class="form-check-input" value="@genre.Id" id="@id" name="ids" />
+                                <input type="checkbox" class="form-check-input" value="@book.Id" id="@id" name="ids" />
                             }
 
                             <label class="form-check-label" for="@id">
-                                @genre.Description
+                                @book.Description
                             </label>
                         </li>
                         selectedIndex++;
@@ -37,13 +37,13 @@
         else
         {
             <div class="card-body">
-                <small><i>No previously selected genres</i></small>
+                <small><i>No previously selected books</i></small>
             </div>
         }
     </div>
     <div class="card w-100">
         <div class="card-header d-flex w-100 justify-content-between mb-1 bg-body-tertiary border-0 align-items-center ">
-            <h5>Other genres</h5>
+            <h5>Other books</h5>
             <div class="row">
                 <div class="mb-1">
                     <button class="btn btn-outline-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasResponsive" aria-controls="offcanvasResponsive" title="Toogle filters">
@@ -60,22 +60,22 @@
                     <div class="offcanvas-body">
                         <div class="container list-group">
                             <div class="list-group-item flex-fill bg-body-tertiary border-0">
-                                <select class="form-select" name="sortBy" asp-for="Filtering.SortBy" asp-items="Html.GetEnumSelectList<TitlesOrganizer.Application.ViewModels.Helpers.SortByEnum>()" onchange="javascript:FormSubmit(event);"></select>
+                                <select class="form-select" name="sortBy" asp-for="Filtering.SortBy" asp-items="Html.GetEnumSelectList<TitlesOrganizer.Application.ViewModels.Helpers.SortByEnum>()" onchange="javascript:$(this.form).trigger('submit')"></select>
                             </div>
                             <div class="list-group-item flex-fill bg-body-tertiary border-0">
-                                <select class="form-select" name="pageSize" asp-for="Paging.PageSize" onchange="javascript:FormSubmit(event);">
-                                    <option value="3">3 genres on page</option>
-                                    <option value="5">5 genres on page</option>
-                                    <option value="10">10 genres on page</option>
-                                    <option value="15">15 genres on page</option>
-                                    <option value="20">20 genres on page</option>
-                                    <option value="50">50 genres on page</option>
-                                    <option value="100">100 genres on page</option>
+                                <select class="form-select" name="pageSize" asp-for="Paging.PageSize" onchange="javascript:$(this.form).trigger('submit')">
+                                    <option value="3">3 books on page</option>
+                                    <option value="5">5 books on page</option>
+                                    <option value="10">10 books on page</option>
+                                    <option value="15">15 books on page</option>
+                                    <option value="20">20 books on page</option>
+                                    <option value="50">50 books on page</option>
+                                    <option value="100">100 books on page</option>
                                 </select>
                             </div>
                             <div class="list-group-item flex-fill bg-body-tertiary border-0">
                                 <div class="input-group">
-                                    <input class="form-control" type="search" asp-for="Filtering.SearchString" name="searchString" id="searchString" placeholder="Search..." onchange="javascript:FormSubmit(event);" />
+                                    <input class="form-control" type="search" asp-for="Filtering.SearchString" name="searchString" id="searchString" placeholder="Search..." onchange="javascript:$(this.form).trigger('submit')" />
                                     <input type="submit" class="btn btn-outline-secondary float-start" value="Search" />
                                 </div>
                             </div>
@@ -87,35 +87,35 @@
         <ul class="list-group list-group-flush">
             @{
                 int otherIndex = 0;
-                foreach (var genre in Model.Values)
+                foreach (var book in Model.Values)
                 {
-                    var id = $"otherGenre_{otherIndex}";
+                    var id = $"otherBook_{otherIndex}";
                     <li class="list-group-item list-group-item-action">
-                        @if (genre.IsForItem)
+                        @if (book.IsForItem)
                         {
-                            <input type="checkbox" class="form-check-input" value="@genre.Id" checked id="@id" name="ids" />
+                            <input type="checkbox" class="form-check-input" value="@book.Id" checked id="@id" name="ids" />
                         }
                         else
                         {
-                            <input type="checkbox" class="form-check-input" value="@genre.Id" id="@id" name="ids" />
+                            <input type="checkbox" class="form-check-input" value="@book.Id" id="@id" name="ids" />
                         }
 
                         <label class="form-check-label" for="@id">
-                            @genre.Description
+                            @book.Description
                         </label>
                     </li>
                     otherIndex++;
                 }
             }
             <li class="list-group-item list-group-item-action input-group">
-                <button type="button" title="Add new genre" onclick="javascript:AddNewGenreForBook(event);">
+                <button type="button" title="Add new book" onclick="javascript:AddNewBookForSeries(event);">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
                         <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
                     </svg>
                 </button>
-                <input id="newGenreName" name="newGenreName" placeholder="Name" onchange="javascript:HideNewGenreError();" />
-                <span class="text-danger" id="newGenreError" style="display: none;">Enter name of the genre.</span>
+                <input id="newBookTitle" name="newBookTitle" placeholder="Title" onchange="javascript:HideNewBookError();" />
+                <span class="text-danger" id="newBookError" style="display: none;">Enter title of the book.</span>
             </li>
         </ul>
         <div class="card-footer justify-content-center">
@@ -172,7 +172,7 @@
         </div>
     </div>
     <div class="row sticky-bottom">
-        <input type="submit" value="Select genres" class="btn btn-primary btn-lg" data-bs-dismiss="modal" onclick="javascript:CloseModal()" />
+        <input type="submit" value="Select books" class="btn btn-primary btn-lg" data-bs-dismiss="modal" onclick="javascript:CloseModal()" />
         <input type="hidden" value="false" name="closeModal" id="closeModal" />
     </div>
 </form>
