--- a/TitlesOrganizer.Web/Views/Books/_AuthorsPartial.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/_AuthorsPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@model TitlesOrganizer.Application.ViewModels.Abstract.IPartialList<TitlesOrganizer.Domain.Models.Author>
-<form asp-action="AuthorsPartial" method="post" id="AuthorsForm">
+<div asp-action="AuthorsPartial" method="post" id="AuthorsForm">
     <div class="card w-100">
         <div class="card-header d-flex w-100 justify-content-between mb-1 bg-body-tertiary border-0 align-items-center">
             <h5>Authors</h5>
@@ -46,7 +46,7 @@
                     @if (Model.Paging.CurrentPage > numbersNextTo + 1)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="javascript:PagerClick('Author', @(Model.Paging.CurrentPage - numbersNextTo - 1))" aria-label="Previous">
+                            <a class="page-link" href="javascript:GoToPage('Author', @(Model.Paging.CurrentPage - numbersNextTo - 1))" aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
                             </a>
                         </li>
@@ -57,7 +57,7 @@
                         if (i < Model.Paging.CurrentPage)
                         {
                             <li class="page-item">
-                                <a class="page-link" href="javascript:PagerClick('Author', @(Model.Paging.CurrentPage - i))">
+                                <a class="page-link" href="javascript:GoToPage('Author', @(Model.Paging.CurrentPage - i))">
                                     @(Model.Paging.CurrentPage - i)
                                 </a>
                             </li>
@@ -74,7 +74,7 @@
                     @for (int i = 1; i <= numbersNextTo && Model.Paging.CurrentPage + i <= pages; i++)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="javascript:PagerClick('Author', @(Model.Paging.CurrentPage + i))">
+                            <a class="page-link" href="javascript:GoToPage('Author', @(Model.Paging.CurrentPage + i))">
                                 @(Model.Paging.CurrentPage + i)
                             </a>
                         </li>
@@ -83,7 +83,7 @@
                     @if (Model.Paging.CurrentPage + numbersNextTo + 1 <= pages)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="javascript:PagerClick('Author', @(Model.Paging.CurrentPage + numbersNextTo + 1))" aria-label="Next">
+                            <a class="page-link" href="javascript:GoToPage('Author', @(Model.Paging.CurrentPage + numbersNextTo + 1))" aria-label="Next">
                                 <span aria-hidden="true">&raquo;</span>
                             </a>
                         </li>
@@ -94,4 +94,4 @@
             <input type="hidden" name="authorsPageNo" id="authorsPageNo" />
         </div>
     </div>
-</form>
+</div>
