--- a/TitlesOrganizer.Web/Views/Books/_GenresPartial.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/_GenresPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@model TitlesOrganizer.Application.ViewModels.Abstract.IPartialList<TitlesOrganizer.Domain.Models.LiteratureGenre>
-<form asp-action="GenresPartial" method="post" id="GenresForm">
+<div asp-action="GenresPartial" method="post" id="GenresForm">
     <div class="card w-100">
         <div class="card-header d-flex w-100 justify-content-between mb-1 bg-body-tertiary border-0 align-items-center">
             <h5>Genres</h5>
@@ -41,7 +41,7 @@
                     @if (Model.Paging.CurrentPage > numbersNextTo + 1)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="javascript:PagerClick('Genre', @(Model.Paging.CurrentPage - numbersNextTo - 1))" aria-label="Previous">
+                            <a class="page-link" href="javascript:GoToPage('Genre', @(Model.Paging.CurrentPage - numbersNextTo - 1))" aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
                             </a>
                         </li>
@@ -52,7 +52,7 @@
                         if (i < Model.Paging.CurrentPage)
                         {
                             <li class="page-item">
-                                <a class="page-link" href="javascript:PagerClick('Genre', @(Model.Paging.CurrentPage - i))">
+                                <a class="page-link" href="javascript:GoToPage('Genre', @(Model.Paging.CurrentPage - i))">
                                     @(Model.Paging.CurrentPage - i)
                                 </a>
                             </li>
@@ -69,7 +69,7 @@
                     @for (int i = 1; i <= numbersNextTo && Model.Paging.CurrentPage + i <= pages; i++)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="javascript:PagerClick('Genre', @(Model.Paging.CurrentPage + i))">
+                            <a class="page-link" href="javascript:GoToPage('Genre', @(Model.Paging.CurrentPage + i))">
                                 @(Model.Paging.CurrentPage + i)
                             </a>
                         </li>
@@ -78,7 +78,7 @@
                     @if (Model.Paging.CurrentPage + numbersNextTo + 1 <= pages)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="javascript:PagerClick('Genre', @(Model.Paging.CurrentPage + numbersNextTo + 1))" aria-label="Next">
+                            <a class="page-link" href="javascript:GoToPage('Genre', @(Model.Paging.CurrentPage + numbersNextTo + 1))" aria-label="Next">
                                 <span aria-hidden="true">&raquo;</span>
                             </a>
                         </li>
@@ -88,4 +88,4 @@
             <input type="hidden" name="genresPageNo" id="genresPageNo" />
         </div>
     </div>
-</form>
+</div>
