--- a/TitlesOrganizer.Web/Views/Books/_SelectAuthorsForBook.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/_SelectAuthorsForBook.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.ListAuthorForBookVM
 
-<form enctype="multipart/form-data" method="post" id="selectAuthors" asp-action="FinalizeSelectAuthorsForBook" onsubmit="SubmitSelect(event, 'Author');" >
+<form enctype="multipart/form-data" method="post" id="selectAuthors" asp-action="FinalizeSelectAuthorsForBook" onsubmit="javascript:SubmitSelectForBook(event, 'Author');" >
     <input type="hidden" asp-for="Item.Id" name="bookId" id="bookId" />
     <input type="hidden" asp-for="Item.Description" />
     <div class="card w-100">
@@ -108,7 +108,7 @@
                 }
             }
             <li class="list-group-item list-group-item-action input-group">
-                <button type="button" title="Add new author" onclick="javascript:AddNewAuthor(event);">
+                <button type="button" title="Add new author" onclick="javascript:AddNewAuthorForBook(event);">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
                         <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
