--- a/TitlesOrganizer.Web/Views/Books/_SelectSeriesForBook.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/_SelectSeriesForBook.cshtml
@@ -54,11 +54,11 @@
                     <li class="list-group-item list-group-item-action">
                         @if (series.IsForItem)
                         {
-                            <input type="radio" class="form-check-input" value="@series.Id" checked id="@id" name="id" />
+                            <input type="checkbox" class="form-check-input" value="@series.Id" checked id="@id" name="id" onchange="javascript:SeriesCheckChange(this);" />
                         }
                         else
                         {
-                            <input type="radio" class="form-check-input" value="@series.Id" id="@id" name="id" />
+                            <input type="checkbox" class="form-check-input" value="@series.Id" id="@id" name="id" onchange="javascript:SeriesCheckChange(this);" />
                         }
 
                         <label class="form-check-label" for="@id">
