Update ViewModels types change fix-up Adjust Services, Mappings and UI Make web application possible to build Update Book and Author Service Tests

--- a/TitlesOrganizer.Web/Views/Books/AuthorDetails.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/AuthorDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.AuthorDetailsVM
+﻿@model TitlesOrganizer.Application.ViewModels.Concrete.BookVMs.AuthorDetailsVM
 @{
     ViewData["Title"] = @Model.Title;
 }
