--- a/TitlesOrganizer.Web/Views/Books/Authors.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Authors.cshtml
@@ -1,4 +1,4 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.ListAuthorForListVM
+﻿@model TitlesOrganizer.Application.ViewModels.Abstract.IListVM
 
 @{
     ViewData["Title"] = "Authors";
