--- a/TitlesOrganizer.Web/Views/Books/BookDetails.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/BookDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.BookDetailsVM
+﻿@model TitlesOrganizer.Application.ViewModels.Concrete.BookVMs.BookDetailsVM
 @{
     ViewData["Title"] = Model.Title;
 }
