--- a/TitlesOrganizer.Web/Views/Books/Books.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Books.cshtml
@@ -1,4 +1,4 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.ListBookForListVM
+﻿@model TitlesOrganizer.Application.ViewModels.Abstract.IListVM
 
 @{
     ViewData["Title"] = "Books";
