--- a/TitlesOrganizer.Web/Views/Books/GenreDetails.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/GenreDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.GenreDetailsVM
+﻿@model TitlesOrganizer.Application.ViewModels.Concrete.BookVMs.GenreDetailsVM
 @{
     ViewData["Title"] = @Model.Title;
 }
