--- a/TitlesOrganizer.Web/Views/Books/Genres.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Genres.cshtml
@@ -1,4 +1,4 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.ListGenreForListVM
+﻿@model TitlesOrganizer.Application.ViewModels.Abstract.IListVM
 
 @{
     ViewData["Title"] = "Genres";
