--- a/TitlesOrganizer.Web/Views/Books/Series.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Series.cshtml
@@ -1,4 +1,4 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.ListSeriesForListVM
+﻿@model TitlesOrganizer.Application.ViewModels.Abstract.IListVM
 
 @{
     ViewData["Title"] = "Book series";
