--- a/TitlesOrganizer.Web/Views/Books/SeriesDetails.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/SeriesDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.SeriesDetailsVM
+﻿@model TitlesOrganizer.Application.ViewModels.Concrete.BookVMs.SeriesDetailsVM
 @{
     ViewData["Title"] = Model.Title;
 }
