--- a/TitlesOrganizer.Web/Views/Books/UpsertAuthor.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/UpsertAuthor.cshtml
@@ -1,4 +1,4 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.AuthorVM
+﻿@model TitlesOrganizer.Application.ViewModels.Concrete.BookVMs.AuthorVM
 
 <h1>@ViewData["Title"]</h1>
 <hr />
