--- a/TitlesOrganizer.Web/Views/Books/UpsertGenre.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/UpsertGenre.cshtml
@@ -1,4 +1,4 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.GenreVM
+﻿@model TitlesOrganizer.Application.ViewModels.Concrete.BookVMs.GenreVM
 
 <h1>@ViewData["Title"]</h1>
 <hr />
