--- a/TitlesOrganizer.Web/Views/Books/UpsertSeries.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/UpsertSeries.cshtml
@@ -1,4 +1,4 @@
-﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.SeriesVM
+﻿@model TitlesOrganizer.Application.ViewModels.Concrete.BookVMs.SeriesVM
 
 <h1>@ViewData["Title"]</h1>
 <hr />
