--- a/TitlesOrganizer.Web/Views/Books/_BooksPartial.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/_BooksPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model TitlesOrganizer.Application.ViewModels.Abstract.IPartialList<TitlesOrganizer.Domain.Models.Book>
+﻿@model TitlesOrganizer.Application.ViewModels.Abstract.IPartialListVM
 <div asp-action="BooksPartial" method="post" id="BooksForm">
     <div class="card w-100">
         <div class="card-header d-flex w-100 justify-content-between mb-1 bg-body-tertiary border-0 align-items-center">
